syntax = "proto3";

package netty;

option java_package = "io.vincent.learning.stack.netty.codec.encode.protobuf";
option java_outer_classname = "SearchRequestProto";

message ItemSearchRequest {
  string query = 1;
  string itemName = 2;
  string userName = 3;
  repeated string address = 4;
  int32 page_number = 5;
  int32 page_size = 6;
}